--- a/_layouts/season.html
+++ b/_layouts/season.html
@@ -2,4 +2,42 @@
 layout: default
 ---
 
-Season
+<h2>Season {{ page.title }}</h2>
+
+<!-- {{ page.table }} -->
+
+
+{% assign sorted = page.table | sort: "points" | reverse %}
+
+
+<table>
+  <thead>
+    <tr>
+      <th>队名</th>
+      <th>比赛</th>
+      <th>胜</th>
+      <th>平</th>
+      <th>负</th>
+      <th>进球</th>
+      <th>失球</th>
+      <th>净胜</th>
+      <th>积分</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for team in sorted %}
+    <tr>
+      <td>{{ team.name }}</td>
+      <td>{{ team.games_played }}</td>
+      <td>{{ team.wins }}</td>
+      <td>{{ team.draws }}</td>
+      <td>{{ team.loses }}</td>
+      <td>{{ team.goals_for }}</td>
+      <td>{{ team.goals_against }}</td>
+      <td>{{ team.goals_for | minus: team.goals_against }}</td>
+      <td>{{ team.points }}</td>
+    </tr>
+    {% endfor %}
+    
+  </tbody>
+</table>
