--- a/_layouts/season.html
+++ b/_layouts/season.html
@@ -27,7 +27,11 @@ layout: default
   <tbody>
     {% for team in sorted %}
     <tr>
-      <td>{{ team.display_name }}</td>
+      <td>
+        <!-- <img class='logo' src='/assets/img/{{ team.logo }}'/> -->
+        <img width=30px src='/assets/img/{{ team.logo }}'/>
+        <a href='{{team.key}}'>{{ team.display_name }}</a>
+      </td>
       <td>{{ team.table.games_played }}</td>
       <td>{{ team.table.wins }}</td>
       <td>{{ team.table.draws }}</td>
