--- a/_layouts/season.html
+++ b/_layouts/season.html
@@ -29,7 +29,7 @@ layout: default
     <tr>
       <td>
         <!-- <img class='logo' src='/assets/img/{{ team.logo }}'/> -->
-        <img width=30px src='/assets/img/{{ team.logo }}'/>
+        <img width=30px src='{{site.baseurl}}/assets/img/{{ team.logo }}'/>
         <a href='{{team.key}}'>{{ team.display_name }}</a>
       </td>
       <td>{{ team.table.games_played }}</td>
