--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -1,9 +1,15 @@
 ---
 layout: page
 ---
+
+<link rel="stylesheet" type="text/css" href="{{"/assets/css/football-field.css" | relative_url }}"> 
+
 <h1>{{ page.team.display_name }}</h1>
 
 
+<div class="row">
+
+    <div class="column">
 <table>
 <thead>
     <tr>
@@ -40,3 +46,39 @@ layout: page
     {% endfor %}
 </tbody>
 </table>
+
+</div>
+
+
+<div class="column">
+<div class="js-stage stage texture">
+    <div style="opacity: 1; transform: translateZ(-200px) translateY(0px);" class="js-world world">
+        
+        <div class="terrain js-terrain">
+            <div class="field field--alt"></div>
+            <div class="field ground">
+                <div class="field__texture field__texture--gradient"></div>
+                <div class="field__texture field__texture--gradient-b"></div>
+                <div class="field__texture field__texture--grass"></div>
+                <div class="field__line field__line--goal"></div>
+                <div class="field__line field__line--goal field__line--goal--far"></div>
+                <div class="field__line field__line--outline"></div>
+                <div class="field__line field__line--penalty"></div>
+                <div class="field__line field__line--penalty-arc"></div>
+                <div class="field__line field__line--penalty-arc field__line--penalty-arc--far"></div>
+                <div class="field__line field__line--mid"></div>
+                <div class="field__line field__line--circle"></div>
+                <div class="field__line field__line--penalty field__line--penalty--far"></div>
+            </div>
+            <div class="field__side field__side--front"></div>
+            <div class="field__side field__side--left"></div>
+            <div class="field__side field__side--right"></div>
+            <div class="field__side field__side--back"></div>
+        </div>
+    </div>
+
+</div>
+</div>
+
+
+</div>
