--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -55,19 +55,13 @@ layout: page
 <div class="column" >
 
     <div class="football_field">
-        <img src="{{"/assets/img/field.png" | relative_url }}" />
+        <img src="{{"/assets/img/field.svg" | relative_url }}" />
 
-        <!-- <div class="player_icon">
-            <img width="50px" src="{{"/assets/img/placeholder-player.jpg" | relative_url }}" />
+        <div class="player LB">
+            <img src="{{"/assets/img/placeholder-player.jpg" | relative_url }}" />
+            <p>狄学长</p>
         </div>
 
-        <div class="player_icon">
-                <img width="50px" src="{{"/assets/img/placeholder-player.jpg" | relative_url }}" />
-            </div>
-
-            <div class="player_icon">
-                    <img width="50px" src="{{"/assets/img/placeholder-player.jpg" | relative_url }}" />
-                </div> -->
     </div>
     
 
