--- a/assets/css/custom-football-squad.css
+++ b/assets/css/custom-football-squad.css
@@ -45,12 +45,128 @@
     text-align: center;
 }
 
+/* GK */
+.player.GK {
+    bottom: 2%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+/* Defender */
+.player.LWB {
+    bottom: 35%;
+    left: 5%;
+}
+
 .player.LB {
     bottom: 20%;
-    left: 5%;
+    left: 8%;
+}
+
+.player.LCB {
+    bottom: 20%;
+    left: 20%;
+}
+
+.player.CB {
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.player.RCB {
+    bottom: 20%;
+    right: 20%;
 }
 
 .player.RB {
     bottom: 20%;
+    right: 8%;
+}
+
+.player.RWB {
+    bottom: 35%;
     right: 5%;
+}
+
+/* Defending Midfielder */
+
+.player.LDM {
+    bottom: 35%;
+    left: 25%;
+}
+
+.player.CDM {
+    bottom: 35%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.player.RDM {
+    bottom: 35%;
+    right: 25%;
+}
+
+/* Midfielder */
+
+.player.LM {
+    bottom: 50%;
+    left: 8%;
+}
+
+.player.LCM {
+    bottom: 50%;
+    left: 20%;
+}
+
+.player.CM {
+    bottom: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.player.RCM {
+    bottom: 50%;
+    right: 20%;
+}
+
+.player.RM {
+    bottom: 50%;
+    right: 8%;
+}
+
+/* Wingers, CAM */
+
+.player.LW {
+    bottom: 65%;
+    left: 10%;
+}
+
+.player.CAM {
+    bottom: 65%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.player.RCM {
+    bottom: 65%;
+    right: 10%;
+}
+
+/* Strikers */
+
+.player.LS {
+    bottom: 75%;
+    left: 25%;
+}
+
+.player.ST {
+    bottom: 75%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.player.RS {
+    bottom: 75%;
+    right: 25%;
 }
