--- a/assets/css/custom-football-squad.css
+++ b/assets/css/custom-football-squad.css
@@ -153,7 +153,7 @@
     transform: translateX(-50%);
 }
 
-.player.RCM {
+.player.RW {
     bottom: 65%;
     right: 10%;
 }
@@ -161,17 +161,17 @@
 /* Strikers */
 
 .player.LS {
-    bottom: 75%;
+    bottom: 79%;
     left: 25%;
 }
 
 .player.ST {
-    bottom: 75%;
+    bottom: 79%;
     left: 50%;
     transform: translateX(-50%);
 }
 
 .player.RS {
-    bottom: 75%;
+    bottom: 79%;
     right: 25%;
 }
