--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -13,6 +13,8 @@ layout: page
 <p>{{ page.team.description }}</p>
 <br/>
 
+<div class="row">
+
 
     <div class="column">
 <table>
@@ -77,6 +79,16 @@ layout: page
     </div>
 
 
+</div>
+
+</div>
+
+<div>
+{% for game in page.games_pair %}
+{% if page.team.key == game[1].home.key or page.team.key == game[1].away.key %}
+{% include game_lines.html game=game season_base_url="../" %}
+{% endif %}
+{% endfor %}
 </div>
 
 
