--- a/_layouts/season_group_knockout.html
+++ b/_layouts/season_group_knockout.html
@@ -61,6 +61,7 @@ layout: default
 </ul>
 </div>
 
+<p style="font-size:12px;">*大一球队直接进入淘汰赛</p>
 
 <h3>小组赛阶段</h3>
 
@@ -91,3 +92,5 @@ layout: default
 {% include game_lines.html game=game season_base_url="" %}
 {% endif %}
 {% endfor %}
+
+<p style="font-size:12px;">*各小组前两名出线</p>
