--- a/_includes/team_link.html
+++ b/_includes/team_link.html
@@ -1,2 +1,6 @@
+{% if include.team != nil %}
 <img width="30px" src='{{site.baseurl}}/assets/img/{{ include.team.logo }}'/>
 <a href='{{include.team.key}}'>{{ include.team.display_name }}</a>
+{% else %}
+&nbsp;
+{% endif %}
