--- a/_includes/knockout_game_link.html
+++ b/_includes/knockout_game_link.html
@@ -2,4 +2,7 @@
   {{include.game[1].home.score}}
   :
   {{ include.game[1].away.score }}
+  {% if include.game[1].extra != nil %}
+  &nbsp; {{include.game[1].extra}}
+  {% endif %}
 </a>
