--- a/_layouts/season_group_knockout.html
+++ b/_layouts/season_group_knockout.html
@@ -82,9 +82,7 @@ layout: default
     {% for team in group[1] %}
     <tr>
       <td>
-        <!-- <img class='logo' src='/assets/img/{{ team.logo }}'/> -->
-        <img width="30px" src='{{site.baseurl}}/assets/img/{{ team.logo }}'/>
-        <a href='{{team.key}}'>{{ team.display_name }}</a>
+        {% include team_link.html team=team %}
       </td>
       <td>{{ team.table.games_played }}</td>
       <td>{{ team.table.wins }}</td>
