auto calculate player goals

--- a/_includes/player_table_line.html
+++ b/_includes/player_table_line.html
@@ -10,6 +10,6 @@
   </td>
   <td><font color='#f55'>{{ include.player.name }}</font></td>
   <td>{{ include.player.position }}</td>
-  <td>{{ include.player.played }}</td>
+  <!-- <td>{{ include.player.played }}</td> -->
   <td>{{ include.player.goals }}</td>
 </tr>
