--- a/_layouts/season.html
+++ b/_layouts/season.html
@@ -2,10 +2,13 @@
 layout: default
 ---
 
-<h2>{{ page.title }} 赛季</h2>
+{% include season_tabs.html name=page.display_name %}
+<div class="row">&nbsp;</div>
 
-<!-- {{ page.table }} -->
-
+{% if page.winner != nil and page.winner != "" %}
+<h3>冠军</h3>
+{% include team_link.html team=page.winner %}
+{% endif %}
 
 <table>
   <thead>
@@ -46,16 +49,3 @@ layout: default
 {% for game in page.games_pair %}
 {% include game_lines.html game=game season_base_url="" %}
 {% endfor %}
-<!-- {% for game in page.games_pair %}
-<font color="#aaa">{{game[1].type}}</font>
-<a href='games/{{game[0]}}'>
-  {{ game[1].home.display_name }}
-  <img width="30px" src='{{site.baseurl}}/assets/img/{{ game[1].home.logo }}'/>
-  {{game[1].home.score}}
-  :
-  {{ game[1].away.score }}
-  <img width="30px" src='{{site.baseurl}}/assets/img/{{ game[1].away.logo }}'/>
-  {{game[1].away.display_name}}
-</a>
-<br/>
-{% endfor %} -->
