--- a/_includes/squad.html
+++ b/_includes/squad.html
@@ -2,10 +2,12 @@
   <img src="{{"/assets/img/field.svg" | relative_url }}" />
 
   {% for player in include.squad %}
+    {% if player.locator != nil %}
       <div class="player {{player.locator}}">
           <img src="{{site.baseurl}}/assets/img/{{player.img}}" />
           <p>{{player.number}} {{player.name}}</p>
       </div>
+    {% endif %}
   {% endfor %}
 
 </div>
