--- a/_includes/game_lines.html
+++ b/_includes/game_lines.html
@@ -1,10 +1,17 @@
-<font color="#aaa">{{include.game[1].type}}</font>
 <a href="{{include.season_base_url}}games/{{include.game[0]}} ">
+<font color="#aaa">{{include.game[1].date}}</font>
+
+<font color="#aaa">{{include.game[1].type}}</font>
+
   {{ include.game[1].home.display_name }}
   <img width="30px" src='{{site.baseurl}}/assets/img/{{ include.game[1].home.logo }}'/>
+  {% if include.game[1].schedule %}
+  &nbsp;VS&nbsp;
+  {% else %}
   {{include.game[1].home.score}}
   :
   {{ include.game[1].away.score }}
+  {% endif %}
   <img width="30px" src='{{site.baseurl}}/assets/img/{{ include.game[1].away.logo }}'/>
   {{include.game[1].away.display_name}}
 </a>
