--- a/_includes/season_tabs.html
+++ b/_includes/season_tabs.html
@@ -1,9 +1,9 @@
 <h2>{{ include.name }}</h2>
 
 <div class="row">
-  <a href=".">赛程</a>
+  <a href=".">{% translate schedule %}</a>
   &nbsp;
   |
   &nbsp;
-  <a href="goal_scorers">射手榜</a>
+  <a href="goal_scorers">{% translate goal_scorers %}</a>
 </div>
