--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -20,12 +20,11 @@ layout: page
         <table class="playerlist">
         <thead>
             <tr>
-            <th>号码</th>
-            <th>头像</th>
-            <th>姓名</th>
-            <th>位置</th>
-            <!-- <th>出场</th> -->
-            <th>进球</th>
+            <th>{% translate player.number %}</th>
+            <th>{% translate player.photo %}</th>
+            <th>{% translate player.name %}</th>
+            <th>{% translate player.position %}</th>
+            <th>{% translate player.goals %}</th>
             </tr>
         </thead>
         <tbody>
