--- a/_layouts/goal_scorers.html
+++ b/_layouts/goal_scorers.html
@@ -5,15 +5,15 @@ layout: default
 {% include season_tabs.html name=page.display_name %}
 <div class="row">&nbsp;</div>
 
-<h3>射手榜</h3>
+<h3>{% translate goal_scorers %}</h3>
 
 <table class="playerlist">
   <thead>
     <tr>
-      <th>头像</th>
-      <th>姓名</th>
-      <th>队伍</th>
-      <th>进球数 (点球)</th>
+      <th>{% translate player.photo %}</th>
+      <th>{% translate player.name %}</th>
+      <th>{% translate player.team %}</th>
+      <th>{% translate player.goals_penalty %}</th>
     </tr>
   </thead>
   <tbody>
