--- a/_includes/team_link.html
+++ b/_includes/team_link.html
@@ -1,5 +1,5 @@
 {% if include.team != nil %}
-<img width="30px" src='{{site.baseurl}}/assets/img/{{ include.team.logo }}'/>
+<img class="team-logo" src='{{site.baseurl}}/assets/img/{{ include.team.logo }}'/>
 <a href='{{include.team.key}}'>{{ include.team.display_name }}</a>
 {% else %}
 &nbsp;
