--- a/_layouts/season.html
+++ b/_layouts/season.html
@@ -47,5 +47,7 @@ layout: default
 <h3>{% translate games_list %}</h3>
 
 {% for game in page.games_pair %}
-{% include game_lines.html game=game season_base_url="" %}
+{% assign gk = game[0] %}
+{% assign g = game[1] %}
+{% include game_lines.html game_key=gk game=g season_base_url="" %}
 {% endfor %}
