some team stats

--- a/_layouts/season_group_knockout.html
+++ b/_layouts/season_group_knockout.html
@@ -7,7 +7,7 @@ layout: default
 <div class="row">&nbsp;</div>
 
 {% if page.winner != nil and page.winner != "" %}
-<h3>{% translate champion %}</h3>
+<h3>🏆 {% translate champion %}</h3>
 {% include team_link.html team=page.winner %}
 {% endif %}
 
