--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -17,7 +17,7 @@ layout: page
     <table class="playerlist">
     <thead>
         <tr>
-            <th></th>
+            <th>{% t table.stats %}</th>
             <th>{% t table.played %}</th>
             <th>{% t table.win %}</th>
             <th>{% t table.tie %}</th>
