fix squad place holder player image

--- a/_includes/squad.html
+++ b/_includes/squad.html
@@ -4,7 +4,7 @@
   {% for player in include.squad %}
     {% if player.locator != nil %}
       <div class="player {{player.locator}}">
-          <img src="{{site.baseurl}}/assets/img/{{player.img}}" />
+          <img src="{{site.baseurl}}/assets/img/{{player.img | default: 'placeholder-player.jpg'}}" />
           <p>{{player.number}} {{player.name}}</p>
       </div>
     {% endif %}
